// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add contenthash to the copied asset with given salt: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main-6f8c66dd.js",
]
`;

exports[`should add contenthash to the copied asset: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main-6f8c66dd.js",
]
`;

exports[`should be able to transform file contents: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/transformed-main.js",
]
`;

exports[`should deleteOriginalAsset: assets 1`] = `
Array [
  "js/deleteOriginalAsset-main.js",
  "js/deleteOriginalAsset-main.js.map",
]
`;

exports[`should do copy assets to the new location and interpolate-name: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main.js-main.js",
]
`;

exports[`should do copy assets to the new location for a given filter: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main.js",
]
`;

exports[`should do copy assets to the new location when destination is a string: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main.js",
]
`;

exports[`should do nothing when there is no change in filename: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
]
`;

exports[`should work along with compression-webpack-plugin: assets 1`] = `
Array [
  "main.js",
  "main.js.map",
  "js/main.js",
  "js/main.js.map",
]
`;
